k8s/api/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: canister
spec:
  replicas: 2
  selector:
    matchLabels:
      app: com.tale.canister.api
  template:
    metadata:
      labels:
        app: com.tale.canister.api
    spec:
      restartPolicy: Always
      containers:
      - name: api
        image: ghcr.io/cnstr/api:latest
        imagePullPolicy: Always
        ports:
        - name: api
          containerPort: 3000
